# LicensePlateRecognition

./: .gitignore  CMakeLists.txt  lpr.files  lpr.includes
db/: images.db
lib/: FindTESSERACT.cmake
src/algo/: CMakeLists.txt  algorithm.cpp  algorithm.hh  exec.cpp  exec.hh  line.cpp  line.hh
src/filter/: CMakeLists.txt  Filter.cpp  Filter.hh
src/gui/: CMakeLists.txt  gui.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/main/: CMakeLists.txt  all.h  cmd-parse.cpp  cmd-parse.hh  main.cpp
src/tools/: CMakeLists.txt  Tools.cpp  Tools.h
